--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port= 9000
-management.server.port= 9001
+#management.server.port= 9001
 #management.server.address: 127.0.0.1
+
+logging.level.org.springframework.messaging=trace
+logging.level.org.springframework.web.socket=trace
