--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,21 @@
             <version>1.28.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.microsoft.cognitiveservices.speech</groupId>
+            <artifactId>client-sdk</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
     </dependencies>
+    <repositories>
+        <repository>
+            <id>maven-cognitiveservices-speech</id>
+            <name>Microsoft Cognitive Services Speech Maven Repository</name>
+            <url>https://csspeechstorage.blob.core.windows.net/maven/</url>
+        </repository>
+    </repositories>
+
     <build>
         <plugins>
             <plugin>
