--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: java
 jdk:
   - openjdk8
 
+os:
+  - linux
+  dist:
+  - xenial # other choices are 'trusty' or 'precise'
+
 branches:
   only:
     - master
@@ -10,6 +15,5 @@ branches:
 cache:
   directories:
     - '$HOME/.m2/repository'
-    - '$HOME/.gradle'
 
 script: "sudo ./mvnw clean package && java -jar target/*.jar"
