--- a/pom.xml
+++ b/pom.xml
@@ -137,14 +137,20 @@
             <artifactId>google-api-client</artifactId>
             <version>1.28.0</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
         <dependency>
             <groupId>com.microsoft.cognitiveservices.speech</groupId>
             <artifactId>client-sdk</artifactId>
             <version>1.3.1</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/io.jmnarloch/rxjava-spring-boot-starter -->
+        <dependency>
+            <groupId>io.jmnarloch</groupId>
+            <artifactId>rxjava-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>maven-cognitiveservices-speech</id>
